[package]
name = "axum_sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.6", features = ["multipart"] }
bytes = "1.7.2"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
mime = "0.3.17"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
